exercises/cks/ch2/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
  name: allowed
spec:
  containers:
  - command: ["/bin/sh", "-c"]
    args:
      - sleep 600
    image: busybox:1.36.0
    name: allowed
    ports:
      - containerPort: 80
    resources: {}
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: backend
  name: denied
spec:
  containers:
  - command: ["/bin/sh", "-c"]
    args:
      - sleep 600
    image: busybox:1.36.0
    name: denied
    ports:
      - containerPort: 80
    resources: {}
  restartPolicy: Always
