exercises/cks/ch2/netpol.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-egress-except-cloud-metadata
#   namespace: backend
# spec:
#   podSelector: {}
#   policyTypes:
#     - Egress
#   egress:
#   - to:
#     - ipBlock:
#         cidr: 0.0.0.0/0
#         except:
#           - 164.254.164.254
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: default
spec:
  podSelector: 
    matchLabels:
      app: backend
  policyTypes:
    - Egress
  egress:
  - to:
    - namespaceSelector: {}
    ports:  
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-namespaces
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:   # all ingress is allowed, but egress allowed only to 2 NS
  - to:
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["frontend", "backend"]
